# LED-heart

./: CMakeLists.txt  Kconfig  prj.conf  west.yml
boards/: esp32_devkitc_wroom.overlay
src/: main.c  main.h
